--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "demo": "parcel serve src/index.html"
+    "serve": "parcel serve src/index.html"
   },
   "author": "",
   "license": "ISC",
