--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "parcel serve src/index.html"
+    "start": "parcel serve src/index.html"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "typescript": "3.8.3"
   },
   "dependencies": {
+    "@ironbay/riptide": "^0.2.14",
     "@reach/router": "^1.3.3",
     "@tailwindcss/ui": "^0.3.0",
     "classnames": "^2.2.6",
