--- a/web/package.json
+++ b/web/package.json
@@ -20,12 +20,13 @@
     "typescript": "3.8.3"
   },
   "dependencies": {
-    "@ironbay/riptide": "^0.2.14",
+    "@ironbay/riptide": "^0.2.17",
     "@reach/router": "^1.3.3",
     "@tailwindcss/ui": "^0.3.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "tailwindcss": "^1.4.6"
+    "tailwindcss": "^1.4.6",
+    "three": "^0.118.3"
   }
 }
