--- a/web/package.json
+++ b/web/package.json
@@ -2,10 +2,10 @@
   "name": "@ironbay/mangrove",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel serve src/index.html"
+    "start": "parcel serve src/index.html",
+    "build": "parcel build src/index.html --dist-dir ./dist"
   },
   "author": "",
   "license": "ISC",
