--- a/web/package.json
+++ b/web/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel serve src/index.html",
+    "start": "parcel serve src/index.html --no-cache --no-hmr",
     "build": "parcel build src/index.html --dist-dir ./dist"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.258",
-    "@parcel/validator-typescript": "^2.0.0-nightly.258",
+    "@parcel/validator-typescript": "^2.0.0-alpha.3",
     "@types/node": "^13.13.5",
     "@types/reach__router": "^1.3.5",
     "@types/react": "^16.9.34",
@@ -20,7 +20,6 @@
     "typescript": "3.8.3"
   },
   "dependencies": {
-    "@ironbay/riptide": "^0.2.17",
     "@reach/router": "^1.3.3",
     "@tailwindcss/ui": "^0.3.0",
     "classnames": "^2.2.6",
