--- a/web/package.json
+++ b/web/package.json
@@ -5,18 +5,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel serve src/index.html --no-cache --no-hmr",
-    "build": "parcel build src/index.html --dist-dir ./dist"
+    "build": "parcel build src/index.html"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.258",
-    "@parcel/validator-typescript": "^2.0.0-alpha.3",
     "@types/node": "^13.13.5",
     "@types/reach__router": "^1.3.5",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
-    "parcel": "2.0.0-nightly.256",
+    "parcel-bundler": "^1.12.5",
     "typescript": "3.8.3"
   },
   "dependencies": {
