--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel serve src/index.html --no-cache --no-hmr",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html --out-dir public"
   },
   "author": "",
   "license": "ISC",
