--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "styled-components": "^5.2.3",
     "tailwindcss": "^1.4.6",
     "three": "^0.118.3"
   }
